corpus/main.txt
======
Action: alert
======

alert tcp 10.0.0.0 any -> $EXTERNAL_NET any ()

------

(source_file
  (action)
  (header
    (protocol)
    (ipv4)
    (port)
    (direction)
    (variable)
    (port))
  (options))

======
Action: reject
======

reject tcp 10.0.0.0 any -> $EXTERNAL_NET any ()

------

(source_file
  (action)
  (header
    (protocol)
    (ipv4)
    (port)
    (direction)
    (variable)
    (port))
  (options))

======
Header: Variables
======

alert tcp $HOME_NET any -> $EXTERNAL_NET any ()

------

(source_file
  (action)
  (header
    (protocol)
    (variable)
    (port)
    (direction)
    (variable)
    (port))
  (options))

======
Header: Group Source Ip Address
======

alert tcp [10.0.0.0, 10.0.0.1] any -> $EXTERNAL_NET any ()

-------

(source_file
  (action)
  (header
    (protocol)
    (group_location
      (ipv4)
      (ipv4))
    (port)
    (direction)
    (variable)
    (port))
  (options))

======
Header: Group Source Port
======

alert tcp 10.0.0.0 [8080, 9999] -> 10.0.0.0 any ()

------

(source_file
  (action)
  (header
    (protocol)
    (ipv4)
    (group_port
      (port)
      (port))
    (direction)
    (ipv4)
    (port))
  (options))

======
Header: Group Destination Ip Address
======

alert tcp 10.0.0.0 any -> [10.0.0.0, 10.0.0.1] any ()

------

(source_file
  (action)
  (header
    (protocol)
    (ipv4)
    (port)
    (direction)
    (group_location
      (ipv4)
      (ipv4))
    (port))
  (options))

======
Generic Options
======

alert tcp 10.0.0.0 any -> 10.0.0.0 any (msg:"hello world";ja2s.hash;tos:!32.2;flowbits:*;)

------

(source_file
  (action)
  (header
    (protocol)
    (ipv4)
    (port)
    (direction)
    (ipv4)
    (port))
  (options
    (keyword)
    (separator)
    (value
      (string))
    (semicolon)
    (keyword)
    (semicolon)
    (keyword)
    (separator)
    (value
      (negation)
      (other))
    (semicolon)
    (keyword)
    (separator)
    (value
      (constant))
    (semicolon)))

======
6.1 -> 6.2.6
======

drop tcp $HOME_NET any -> $EXTERNAL_NET any (msg:”ET TROJAN Likely Bot Nick in IRC (USA +..)”; flow:established,to_server; flowbits:isset,is_proto_irc; content:”NICK “; pcre:”/NICK .*USA.*[0-9]{3,}/i”; reference:url,doc.emergingthreats.net/2008124; classtype:trojan-activity; sid:2008124; rev:2;)

------

(source_file
  (action)
  (header
    (protocol)
    (variable)
    (port)
    (direction)
    (variable)
    (port))
  (options
    (keyword)
    (separator)))

======
6.3.1
======

alert ip $EXTERNAL_NET any -> $HOME_NET any (msg:”GPL MISC 0 ttl”; ttl:0; reference:url,support.microsoft.com/default.aspx?scid=kb#-#-EN-US#-#-q138268; reference:url,www.isi.edu/in-notes/rfc1122.txt; classtype:misc-activity; sid:2101321; rev:9;)

------

======
6.3.3
======

alert ip any any -> any any (msg:”GPL SCAN same SRC/DST”; sameip; reference:bugtraq,2666; reference:cve,1999-0016; reference:url,www.cert.org/advisories/CA-1997-28.html; classtype:bad-unknown; sid:2100527; rev:9;)

------

======
6.3.4
======

alert ip any any -> any any (msg:”GPL MISC IP Proto 103 PIM”; ip_proto:103; reference:bugtraq,8211; reference:cve,2003-0567; classtype:non-standard-protocol; sid:2102189; rev:4;)

------

======
6.3.5
======

alert ip any any -> any any (ipv4.hdr; content:”|3A|”; offset:9; depth:1; sid:1234; rev:5;)

------

======
6.3.9
======

alert tcp $EXTERNAL_NET any -> $HOME_NET any (msg:”ET EXPLOIT Invalid non-fragmented packet with fragment offset>0”; fragbits: M; fragoffset: >0; reference:url,doc.emergingthreats.net/bin/view/Main/2001022; classtype:bad-unknown; sid:2001022; rev:5; metadata:created_at 2010_07_30, updated_at 2010_07_30;)

------

======
6.3.11
======

alert ip any any -> any any (msg:”TGI HUNT non-DiffServ aware TOS setting”; flow:established,to_server; tos:!0; tos:!8; tos:!16; tos:!24; tos:!32; tos:!40; tos:!48; tos:!56; threshold:type limit, track by_src, seconds 60, count 1; classtype:bad-unknown; sid:2600124; rev:1;)

------

======
6.4.5
======

alert tcp $EXTERNAL_NET any -> $HOME_NET any (flags:S,12; tcp.hdr; content:”|02 04|”; offset:20; byte_test:2,<,536,0,big,relative; sid:1234; rev:5;)

------

===
String?
===

alert tcp any any -> any any (msg:”ET TROJAN Likely Bot Nick in IRC (USA +..)”;)

---
